# Dual_UR_Demo

./: .gitignore  .gitmodules  README_zh.md  reset_urdf.py
src/: create_ros2_pkg.sh
src/my_control/: CMakeLists.txt  package.xml
src/my_control/include/my_control/: ur_moveit_control.hpp
src/my_control/launch/: my_control.launch.py
src/my_control/src/: my_env_moveit_control.cpp  my_env_ros2_control.cpp  ur_moveit_control.cpp
src/my_env/my_env_control/: CMakeLists.txt  package.xml
src/my_env/my_env_control/config/: my_robotiq_controllers.yaml  my_robotiq_update_rate.yaml  my_ur_controllers.yaml
src/my_env/my_env_control/launch/: my_robotiq_control.launch.py  my_ur_control.launch.py  start_my_env_control.launch.py
src/my_env/my_env_control/rviz/: my_env_control.rviz
src/my_env/my_env_control/urdf/: my_env_control.urdf.xacro  robotiq_2f_85_gripper_control.urdf.xacro
src/my_env/my_env_description/: CMakeLists.txt  package.xml
src/my_env/my_env_description/launch/: view_my_env.launch.py
src/my_env/my_env_description/rviz/: my_env_description.rviz
src/my_env/my_env_description/urdf/: my_env.urdf.xacro  my_env_macro.urdf.xacro  my_ur_macro.urdf.xacro
src/my_env/my_env_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_env/my_env_moveit_config/config/: controlers.yaml  controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  my_env.ros2_control.xacro  my_env.srdf  my_env.urdf.xacro  my_env_controlled.srdf  my_env_moveit.rviz  ompl_planning.yaml  ros2_controllers.yaml  ur_servo.yaml
src/my_env/my_env_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  my_env_moveit.launch.py  my_ur_moveit.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  start_my_env_moveit.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
